Prevent paragraphs from stretching ui

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -6,6 +6,21 @@ label {
   display: none;
 }
 
+p {
+    word-break: break-all;
+    white-space: normal;
+}
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
+
 .login-bar {
   position: absolute;
   background-color: #292b2c;
